styles.css
/* ... */
#popup-error {
	background: var(--black);
	border: 2px solid var(--secondary-button);
	color: var(--white);
	display: none;
	font-weight: 400;
    left: 50%;
	overflow: hidden;
    padding: 10px;
	position: fixed;
	text-align: center;
    top: 30%;
	transform: translate(-50%, 0);
	width: 250px;
	z-index: 3;
}
#popup-error .button {
	margin: 10px auto 5px;
}
#dice-attributes {
	flex-basis: 100%;
    flex-grow: 1;
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
}
#character-attributes {
	max-width: 577px;
	margin: 15px 15px 30px 15px;
	display: grid;
    grid-template-columns: 24px 147px 30px 104px 161px 30px;
    grid-gap: 15px;
}
.spell-list, #sec-focus-attribute, #sec-focus-connector, #sec-species-attribute {
	display: none;
}
.status-effect li {
	color: var(--white);
	padding-left: 30px;
    pointer-events: auto;
    cursor: pointer;
}
.status-effect li:before {
    content: '\2610';
    margin-left: -25px;
    margin-right: 15px;
    font-size: 16px;
    font-weight: 700;
	font-family: var(--droid-font);
}
.status-effect.active li {
	color: var(--selected);
}
.status-effect.active li:before {
    content: '\1F5F9';
	margin-right: 14px;
	font-family: var(--droid-font);
}
#dice-counters {
	display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 15px;
	max-width: 577px;
    margin: 0 30px 0 30px;
	flex-grow: 1;
}
#character-options {
	display: none;
    flex-basis: calc(100% - 30px);
    flex-wrap: wrap;
    justify-content: flex-start;
    margin: 15px 0 0 15px;
	align-items: baseline;
}
#buttons {
	display: flex;
	flex-basis: 100%;
	flex-wrap: wrap;
	justify-content: flex-start;
}
#cyberware, .item-list, .spell-list {
	flex-grow: 1;
	margin: 15px 15px 10px 15px;
}
.item-list .chosen-single, .gu-mirror:not(.cyberware) .chosen-single, .gu-transit:not(.cyberware) .chosen-single {
	border: 0!important;
	box-shadow: none!important;
	height: 18px;
	line-height: 18px;
	padding: 0!important;
	width: fit-content;
}
.item-list .chosen-single span, .gu-mirror .chosen-single span, .gu-transit .chosen-single span {
	margin-right: 0!important;
	text-align: center;
	width: fit-content;
}
.item-list .chosen-single > div, .gu-mirror .chosen-single > div, .gu-transit .chosen-single > div {
	display: none!important;
}
.item-list .chosen-drop, .gu-mirror .chosen-drop, .gu-transit .chosen-drop {
	text-align: left;
	width: fit-content;
}
.chosen-container-multi .chosen-choices li.search-field input[type=text] {
    height: 19px;
    font-family: var(--body-font);
    color: var(--black);
}
.chosen-container-multi .chosen-choices li.search-choice {
	font-family: var(--body-font);
    border-radius: 0;
    background-image: none;
    background-color: var(--secondary-button-hover);
    color: var(--black);
    box-shadow: none;
    border: 0;
    height: 19px;
    line-height: 19px;
	margin: 3px 3px 0 0;
    padding: 0 20px 0 5px;
}
#contacts td.effect {
	width: 50%;
}
#contacts td.name, #contacts td.skill, #artifacts td.name {
	width: 20%;
}
#artifacts td.effect {
	width: 75%;
}
#cyber-content {
	display: flex;
}
#cyber-mannequin {
	flex-grow: 0;
	min-width: 280px;
	margin-top: 10px;
    max-width: 280px;
	position: relative;
	zoom: 0.9;
}
#cyber-mannequin img {
	cursor: pointer;
	pointer-events: auto;
	position: absolute;
	z-index: 2;
}
#cyber-mannequin .skin {
	position: relative;
	width: 100%;
	z-index: 1;
}
#cyber-mannequin .head {
	left: 119px;
    top: 4px;
}
#cyber-mannequin .core {
	left: 70px;
    top: 59px;
}
#cyber-mannequin .leftarm {
    right: 7px;
    top: 122px;
}
#cyber-mannequin .rightarm {
    left: 7px;
    top: 122px;
}
#cyber-mannequin .leftleg {
	top: 221px;
    right: 95px;
}
#cyber-mannequin .rightleg {
	top: 221px;
    left: 95px;
}
#cyber-mods {
	color: var(--white);
	font-size: 14px;
	font-family: 'Consolas', monospace;
	margin-left: 20px;
	max-width: 300px;
	min-width: 250px;
}
.cyber-currency {
	font-family: var(--droid-font);
}
#spellbook, #archives{
	display: flex;
	flex-basis: 100%;
	flex-direction: column;
	flex-wrap: wrap;
	margin: 15px 15px 0 15px;
}
#spellbook .spell {
	margin-bottom: 15px;
	width: 100%;
}
#spellbook .spell.disabled {
	filter: brightness(75%) grayscale(85%);
	pointer-events: none;
}
#spellbook .spell .header {
	background: var(--button);
	color: var(--white);
	justify-content: space-between;
	padding: 12px 15px 15px 15px;
}
#spellbook .spell.optional .header {
	background: var(--dark-grey);
}
#spellbook .tier {
    font-family: var(--header-font);
    font-size: 24px;
	font-weight: 400;
	line-height: 1em;
	text-transform: uppercase;
	white-space: nowrap;
}
#spellbook .spell img {
	height: 24px;
	padding-right: 12px;
	position: relative;
    top: 1px;
	width: 24px;
}
#spellbook .details {
	background: var(--white);
	box-shadow: inset 0 0 0 3px var(--white);
	color: var(--black);
	padding: 15px;
}
#spellbook .stats {
	display: flex;
	flex-wrap: wrap;
	margin-top: 15px;
}
#spellbook .spell .stats:first-child {
	margin-top: 0;
	margin-bottom: 15px;
}
#spellbook .stats span {
	flex-basis: calc( 50% - 10px );
	padding-right: 10px;
}
#spellbook .stats span:nth-child(even), #spellbook .origin {
	padding-right: 0;
	text-align: right;
}
#spellbook .description, #archives .description {
	flex-basis: 100%;
}
#spellbook span.origin, #spellbook span.optional {
	color: var(--dark-grey);
	font-style: italic;
}
#spellbook .spell span:nth-child(odd).origin {
	flex-basis: 100%;
}
#rules {
	color: var(--white);
}
#rules h3 {
    padding: 10px;
    text-transform: uppercase;
    background-color: var(--button);
    margin: 5px 0;
    line-height: 0.9em;
    cursor: pointer;
    pointer-events: auto;
}
#rules h3:hover, #rules h3.active:hover {
	background-color: var(--button-hover);
}
#rules h3:active, #rules h3.active {
	background-color: var(--button-active);
}
/* ... */

